# SimpleSL

./: Cargo.toml  LICENSE  README.md  replace  script
docs/: control_flow.md  iterators.md  operators.md  statements.md  statments.md  stdlib.md
example_scripts/: example1  fib  filter  fizzbuzz  loops  quick_sort  replace
examples/: example1  fib  fizzbuzz  hello_world.rs  merge_sort
macros/: Cargo.toml
macros/src/: attributes.rs  decl.rs  export.rs  export_function.rs  lib.rs  utils.rs  var.rs  var_type.rs
parser/: Cargo.toml
parser/src/: lib.rs  simplesl.pest
proptest-regressions/: variable.txt
src/: array.rs  bin_operator.rs  code.rs  error.rs  errors.rs  function.rs  function_macros.rs  instruction.rs  intepreter.rs  interpreter.rs  iofunctions.rs  lib.rs  main.rs  op.rs  params.rs  parse.rs  simplesl.pest  stdfunctions.rs  stdlib.rs  test_example_scripts.rs  to_result.rs  unary_operator.rs  variable.rs  variable_type.rs
src/errors/: error.rs  exec_error.rs  parse_type_error.rs  type_parsing_error.rs
src/function/: body.rs  check_args.rs  instruction.rs  langfunction.rs  line.rs  local_variable.rs  macros.rs  mod.rs  nativefunction.rs  param.rs
src/instruction/: add.rs  and.rs  array.rs  array_repeat.rs  at.rs  bin_and.rs  bin_not.rs  bin_op.rs  bin_or.rs  bitwise.rs  block.rs  check_args.rs  destruct_tuple.rs  divide.rs  equal.rs  field_access.rs  function.rs  function_call.rs  greater.rs  greater_or_equal.rs  if_else.rs  import.rs  local_function_call.rs  local_variable.rs  logic.rs  loop.rs  lshift.rs  macros.rs  math.rs  module.rs  modulo.rs  multiply.rs  mut.rs  not.rs  or.rs  ord.rs  pattern.rs  postfix_op.rs  prefix_op.rs  reduce.rs  (+19 more)
src/instruction/array_ops/: filter.rs  map.rs  mod.rs  reduce.rs  type_filter.rs
src/instruction/bin_op/: assign.rs  bitwise.rs  equal.rs  filter.rs  logic.rs  map.rs  math.rs  ord.rs  partition.rs  reduce.rs  shift.rs
src/instruction/bitwise/: and.rs  bitwise_and.rs  bitwise_not.rs  bitwise_or.rs  lshift.rs  not.rs  or.rs  rshift.rs  shift.rs  xor.rs
src/instruction/comp/: equal.rs  greater.rs  greater_or_equal.rs  lower.rs  lower_or_equal.rs  mod.rs
src/instruction/control_flow/: if_else.rs  match.rs  match_arm.rs  match_pattern.rs  mod.rs  set_if_else.rs
src/instruction/function/: anonymous.rs  call.rs  declaration.rs  function_declaration.rs  mod.rs
src/instruction/logic/: and.rs  mod.rs  not.rs  or.rs
src/instruction/loop/: for.rs  while.rs  while_set.rs
src/instruction/macros/: bin_int_op.rs  bin_num_op.rs  bin_op.rs  bin_op_cbu.rs  prefix_op.rs
src/instruction/math/: add.rs  divide.rs  mod.rs  modulo.rs  multiply.rs  pow.rs  subtract.rs  unary_minus.rs
src/instruction/pattern/: destruct_pattern.rs
src/instruction/prefix_op/: macro.rs
src/instruction/reduce/: all.rs  any.rs  bit.rs  bitand.rs  bitor.rs  bool_reduce.rs  collect.rs  product.rs  sum.rs
src/stdlib/: array.rs  convert.rs  fs.rs  io.rs  iofunctions.rs  math.rs  mod.rs  operators.rs  stdlib.rs  string.rs  types.rs
src/variable/: array.rs  function_type.rs  generics.rs  multi.rs  multi_type.rs  mut.rs  ops.rs  struct_type.rs  try_from.rs  type.rs  type_of.rs  type_set.rs  variable_type.rs
src/variable_type/: type_set.rs
tests/: example_scripts.rs  readme.rs
(+20 files in other folders)
