[workspace]
[package]
name = "simplesl"
version = "0.1.0"
authors = ["Michał Połosak <mpolosak@op.pl>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mpolosak/SimpleSL"
readme = "README.md"
description = "Simple Scripting Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "14.0.0"
pest = "2.0"
pest_derive = "2.0"
unescaper = "0.1.0"
lazy_static = "1.4.0"
typle = "0.9.2"
simplesl_macros = { path="macros", version="0.1.0" }
match_any = "1.0.1"