[workspace]
[workspace.dependencies]
pest = "2.0"
lazy_static = "1.4.0"
simplesl_parser = { path="parser", version="0.1.0" }
unescaper = "0.1.0"

[package]
name = "simplesl"
version = "0.1.0"
authors = ["Michał Połosak <mpolosak@op.pl>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mpolosak/SimpleSL"
readme = "README.md"
description = "Simple Scripting Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "14.0.0"
typle = "0.10.2"
simplesl_macros = { path="macros", version="0.1.0" }
match_any = "1.0.1"
duplicate = "1"
enum-as-inner = "0.6.0"
pest.workspace = true
lazy_static.workspace = true
simplesl_parser.workspace = true
unescaper.workspace = true

[dev-dependencies]
itertools="0.13.0"
markdown = "0.3"
proptest = "1.0.0"