[package]
name = "simplesl_macros"
version = "0.1.0"
authors = ["Michał Połosak <mpolosak@op.pl>"]
edition = "2021"
license = "MIT"
description = "Macros simplyfing adding functions to SimpleSl"
repository = "https://github.com/mpolosak/SimpleSL"

[lib]
proc_macro = true

[dependencies]
quote = "1.0"
syn = {version = "2.0.17", features = ["full", "extra-traits"]}
proc-macro2 = "1.0"
simplesl_parser.workspace = true
pest.workspace = true
unescaper.workspace = true